(library
 (public_name sqlite3)
 (libraries bigarray)
 (foreign_stubs
  (language c)
  (names sqlite3_stubs)
  (flags
   (:standard)
   (:include c_flags.sexp)))
 (c_library_flags
  (:include c_library_flags.sexp)))

(rule
 (targets c_flags.sexp c_library_flags.sexp)
 (action
  (setenv
   SQLITE3_OCAML_BREWCHECK
   "1"
   (run ./config/discover.exe))))
